# RWAForge

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/ai/analyze/: route.ts
frontend/src/app/asset/[mint]/: page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/app/marketplace/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/tokenize/: page.tsx
frontend/src/components/layout/: header.tsx
frontend/src/components/marketplace/: listing-card.tsx
frontend/src/components/providers/: solana-provider.tsx
frontend/src/components/tokenize/: ai-valuation-panel.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  loading.tsx  textarea.tsx
frontend/src/lib/: demo-data.ts  types.ts  utils.ts
frontend/src/lib/solana/: config.ts  marketplace.ts  tokenize.ts
frontend/src/lib/solana/idl/: rwa_tokenization.json
programs/rwa_marketplace/: Cargo.toml
programs/rwa_marketplace/src/: lib.rs
programs/rwa_tokenization/: Cargo.toml
programs/rwa_tokenization/src/: lib.rs
programs/rwa_transfer_hook/: Cargo.toml  README.md
programs/rwa_transfer_hook/src/: errors.rs  lib.rs  state.rs
programs/rwa_transfer_hook/src/instructions/: admin.rs  execute.rs  initialize.rs  mod.rs
scripts/: deploy-devnet.ps1  deploy-devnet.sh  deploy-mainnet.sh  install-frontend.ps1
tests/: rwa_marketplace.ts  rwa_tokenization.ts  rwa_transfer_hook.ts
