[package]
name = "rwa_marketplace"
version = "0.1.0"
description = "RWAForge marketplace escrow program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022", "associated_token"] }

# Force consistent Solana version across all programs
solana-program = "=2.2.0"

# Token-2022 and related
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.5.0"
spl-transfer-hook-interface = "0.8.0"
spl-tlv-account-resolution = "0.8.0"
spl-pod = "0.4.0"

# Optional but recommended
spl-associated-token-account = "3.0.0"