[package]
name = "rwa_tokenization"
version = "0.1.0"
description = "RWAForge Token-2022 tokenization engine"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_tokenization"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.6.0"
spl-type-length-value = "0.6.0"
