[package]
name = "rwa_transfer_hook"
version = "0.1.0"
description = "RWAForge Token-2022 transfer hook for KYC/compliance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }

spl-transfer-hook-interface = "0.6.5"
spl-tlv-account-resolution = "0.6.5"
spl-token-2022 = { version = "3.0.4", features = ["no-entrypoint"] }

# Needed for the SplDiscriminate trait
spl-discriminator = "0.2.5"
